--- a/main.css
+++ b/main.css
@@ -17,12 +17,13 @@ footer .row {
 header h1 {
   font-weight: 700;
   margin: 0;
-  color:magenta;
+  color:#9353E9;
 }
 
 header nav {
   display: flex;
   justify-content: flex-end;
+ 
 }
 
 header p {
@@ -32,14 +33,14 @@ header p {
 
 
 .container{
- 
-  
+  color:#38E6BC
+}
   
 
 .jumbotron {
   display: flex;
   align-items: center;
-  background-image: url('https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/jumbotron.jpg');
+  background-image: url('https://s-media-cache-ak0.pinimg.com/736x/f6/32/cd/f632cd17e3a264214e64d9df83220edd.jpg');
   background-size: cover;
   color: #ffffff;
   height: 500px;
@@ -50,12 +51,12 @@ header p {
   font-size: 60px;
   font-weight: 700;
   margin: 0;
-  color: #fff;
+  color:#A0F21A;
 }
 
 .jumbotron h3 {
   margin: 0 0 20px;
-  color: #fff;
+  color: #00D5FA;
 }
 
 section .row img {
@@ -70,7 +71,7 @@ section .row img {
 .btn.btn-primary {
   border-radius: 2px;
   border: 0px;
-  color: #fbd1d5;
+  color: #F31A8D;
   text-shadow: none;
   background-color: #ffffff;
 }
